Cleaning things up further; more strict enforcement of clean coding guidelines, getting rid of useless utilities, etc.
git-svn-id: http://taverna.googlecode.com/svn@16197 bf327186-88b3-11dd-a302-d386e5130c1c